--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,7 +4,7 @@
   Leden: { description: "Overzicht van onze leden", path: users_path, icon: 'user' },
   Groepen: { description: "Groepen binnen het dispuut", path: usergroups_path, icon: 'user-group' },
   Stickers: { description: "Waar hangen onze stickers?", path: stickers_path, icon: 'chip' },
-  Recepten: { description: "Wat hebben wij gebrouwen?", path: recipe_index_path, icon: 'beaker' },
+  Recepten: { description: "Wat hebben wij gebrouwen?", path: recipes_path, icon: 'beaker' },
   Vergaderingen: { description: "Lees hier de notulen", path: meetings_path, icon: 'chat-alt-2' },
   Log: { description: "Logs van de website", path: trail_path, icon: 'book-open' },
   Blog: { description: "Wat hebben we gedaan?", path: blogitems_path, icon: 'pencil-alt' },
