--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -28,15 +28,29 @@
     <%= @recipe.description %>
   </aside>
 
-  <div class='md:col-span-4 md:pl-6 my-6'>
-    Uitvoeringen:
+  <div class="col-md-3">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <% if @brews.any? %>
+          Uitvoeringen:
+          <ul>
+            <% @brews.each do |brew| %>
+              <li><%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %></li>
+            <% end %>
+          </ul>
+        <% else %>
+          Dit recept is nog niet uitgevoerd.
+        <% end %>
 
-    <ul>
-      <% @brews.each do |brew| %>
-        <li><%= link_to brew.created_at.strftime("%d-%m-%Y"), brew_path(@recipe, brew) %></li>
-      <% end %>
-    </ul>
+        <hr>
 
-    <%= button_to "Brouwen!", new_brew_path(@recipe), method: :get, class: submit_classes %>
+        <div class="btn-group btn-group-vertical">
+          <%= link_to 'Recept bijwerken', edit_recipe_path(@recipe), class: 'btn btn-default' %>
+          <%= link_to 'Recept verwijderen', @recepe, method: :delete, class: 'btn btn-default', data: { confirm: 'Zeker weten? Je verwijdert het recept en alle keren dat het gebrouwen is!' } %>
+          <%= link_to 'Nieuwe uitvoering', new_brew_path(@recipe), class: 'btn btn-default' %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
