--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -52,10 +52,10 @@
                   <%= recipe.created_at.strftime("%d-%m-%Y") %>
                 </td>
                 <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
-                  <%= recipe.update_at.strftime("%d-%m-%Y") %>
+                  <%= recipe.updated_at.strftime("%d-%m-%Y") %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                  <%= link_to page, class: "float-right" do %>
+                  <%= link_to recipe, class: "float-right" do %>
                     <%= heroicon('chevron-right', class_name: "flex-shrink-0 h-5 w-5 text-gray-400") %>
                   <% end %>
                 </td>
