Homepage styling fixes

--- a/app/views/shared/_blog.html.erb
+++ b/app/views/shared/_blog.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-white overflow-hidden shadow rounded-lg hidden lg:block">
   <%= link_to blogitems_path do %>
-    <h2 class="m-4 text-hamers-red-400 text-xl font-extrabold">Blogposts</h2>
+    <h2 class="m-4 text-hamers-red-400 text-xl font-bold">Blogposts</h2>
   <% end %>
   <ul class="divide-y divide-gray-200 w-full">
     <% @blogitems.each do |b| %>
