--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white overflow-hidden md:shadow md:rounded-lg hidden md:block md:p-4">
-  <h2 class="text-hamers-red-400 text-xl font-extrabold mb-4">Uitgelicht biertje</h2>
+  <h2 class="text-hamers-red-400 text-xl font-bold mb-4">Uitgelicht biertje</h2>
   <div class="flex justify-center h-full">
     <% if @random_beer %>
       <div class="flex-shrink-0">
