--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white overflow-hidden shadow rounded-lg hidden lg:block">
-    <h2 class="text-hamers-red-400 text-xl font-extrabold m-4">Wat is er gebeurd?</h2>
+    <h2 class="text-hamers-red-400 text-xl font-bold m-4">Wat is er gebeurd?</h2>
     <div class="flex items-center">
       <ul class="divide-y divide-gray-200 w-full">
         <% @trail.each do |t| %>
