--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,8 +1,8 @@
 <div class="hidden bg-white overflow-hidden shadow rounded-lg md:block p-4">
-  <h2 class="text-xl font-extrabold tracking-tight text-gray-900 mb-4 text-center mt-2">
+  <h2 class="text-xl font-bold tracking-tight text-gray-900 mb-4 text-center mt-2">
     Welkom <span class="text-hamers-red-500"><%= current_user.name %></span>
   </h2>
-  <p class="block font-extrabold text-justify">
+  <p class="block font-semibold text-justify">
             Je bent <span class="text-hamers-red-500"><%= current_user.quotes.count %></span> keer geciteerd,
             hebt <span class="text-hamers-red-500"><%= current_user.reviews.count %></span> biertjes gereviewd,
             <span class="text-hamers-red-500"><%= current_user.blogitems.count %></span> blogs geschreven en
