--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white overflow-hidden md:shadow md:rounded-lg md:p-4">
-    <h2 class="text-hamers-red-500 text-xl font-bold">Quote</h2>
+    <h2 class="text-hamers-red-400 text-xl font-bold">Quote</h2>
     <div class="flex items-center mt-2">
       <%= form_for @quote, html: { class: "w-full" } do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
@@ -8,15 +8,15 @@
             <%= f.text_area :text,
                 placeholder: 'Wat zei die lul?',
                 rows: 2,
-                class: 'shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md' %>
+                class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md' %>
           </div>
         </div>
         <div class="col-span-6 sm:col-span-3">
           <% users_array = User.all.reverse.map { |user| [user.name, user.id] } %>
-          <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm' %>
+          <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm' %>
         </div>
         <div class="text-right mt-4 sm:w-full">
-          <%= f.submit 'Citeer', class: 'text-center py-2 px-4 border border-transparent shadow-sm text-sm font-bold rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
+          <%= f.submit 'Citeer', class: 'text-center py-2 px-4 border border-transparent shadow-sm text-sm font-bold rounded-md text-white bg-hamers-red-400 hover:bg-hamers-red-600 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
         </div>
       <% end %>
     </div>
