--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
 
       <main class="-mt-32">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-          <div class="bg-white rounded-lg shadow px-5 py-6 sm:px-6">
+          <div class="bg-white rounded-lg overflow-hidden shadow p-6">
             <%= yield %>
           </div>
         </div>
