Index styling fixes

--- a/app/views/meetings/_list.html.erb
+++ b/app/views/meetings/_list.html.erb
@@ -1,4 +1,4 @@
-<ul role="list" class="-mx-6 -mt-6 divide-y divide-gray-200">
+<ul role="list" class="-m-6 divide-y divide-gray-200">
   <% meetings.each do |meeting| %>
     <li>
       <%= link_to meeting, class: "block hover:bg-gray-50" do %>
