--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @meeting, html: {class: 'meeting-form form-horizontal'} do |f| %>
+<%= form_for @meeting, html: { class: 'space-y-2 space-y' } do |f| %>
   <% if @meeting.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this meeting from being saved:</h2>
@@ -11,45 +11,23 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :agenda, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_area :agenda, class: 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :onderwerp, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.text_field :onderwerp, class: 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :datum, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.date_field :date, required: true, class: 'form-control' %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :voorzitter, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.select :chairman_id, User.intern.collect {|x| [x.name, x.id]}, include_blank: true %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :notulist, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.select :secretary_id, User.intern.collect {|x| [x.name, x.id]}, include_blank: true %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :aanwezigen, class: 'col-sm-2 control-label' %>
-    <div class="col-sm-10">
-      <%= f.select :user_ids, User.intern.collect {|x| [x.name, x.id]}, {}, {class: "big-select", multiple: true} %>
-    </div>
-  </div>
-  <div class="actions">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit :Verstuur, class: 'btn btn-primary' %>
-    </div>
-  </div>
+  <%= f.label :agenda, class: label_classes %>
+  <%= f.text_area :agenda, class: input_classes %>
+
+  <%= f.label :onderwerp, class: label_classes %>
+  <%= f.text_field :onderwerp, class: input_classes %>
+
+  <%= f.label :datum, class: label_classes %>
+  <%= f.date_field :date, required: true, class: input_classes %>
+
+  <%= f.label :voorzitter, class: label_classes %>
+  <%= f.select :chairman_id, User.intern.collect { |x| [x.name, x.id] }, { include_blank: true }, { class: select_classes } %>
+
+  <%= f.label :notulist, class: label_classes %>
+  <%= f.select :secretary_id, User.intern.collect { |x| [x.name, x.id] }, { include_blank: true }, { class: select_classes } %>
+
+  <%= f.label :aanwezigen, class: label_classes %>
+  <%= f.select :user_ids, User.intern.collect { |x| [x.name, x.id] }, {}, { class: select_classes, multiple: true } %>
+
+  <%= f.submit :Opslaan, class: submit_classes %>
 <% end %>
