--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -13,7 +13,7 @@
         </div>
         <div class="col-span-6 sm:col-span-3">
           <% users_array = User.all.reverse.map { |user| [user.name, user.id] } %>
-          <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm' %>
+          <%= f.select :user_id, options_for_select(users_array), {}, class: select_classes %>
         </div>
         <div class="text-right mt-4 sm:w-full">
           <%= f.submit 'Citeer', class: 'text-center py-2 px-4 border border-transparent shadow-sm text-sm font-bold rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
