--- a/app/views/recipe/show.html.erb
+++ b/app/views/recipe/show.html.erb
@@ -4,11 +4,7 @@
 
 <div class="row">
   <div class="col-md-9">
-    <% if @recipe.actiontext_description.blank? %>
-      <%= markdown(@recipe.description).html_safe %>
-    <% else %>
-      <%= @recipe.actiontext_description %>
-    <% end %>
+    <%= @recipe.description %>
   </div>
 
   <div class="col-md-3">
