--- a/app/views/public_pages/_form.html.erb
+++ b/app/views/public_pages/_form.html.erb
@@ -15,7 +15,7 @@
       <%= f.text_field :title %>
     </div>
     <div class="field">
-      <%= f.text_area :content, rows: 25 %>
+      <%= f.rich_text_area :content %>
     </div>
     <div class="field">
       <%= f.check_box :public %>
