--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -2,7 +2,7 @@
   <div class="flex space-x-3 text-sm">
     <%= gravatar_for quote.user, class: "h-8 w-8 rounded-full self-center" %>
     <div class="flex-col flex-1 space-y-1">
-      <div class="flex items-center justify-between align-items-center self-center">
+      <div class="flex flex-col sm:flex-row space-y-1 justify-between self-center">
         <h3 class="flex-grow font-medium"><%= quote.text %></h3>
         <span class="relative z-0 inline-flex rounded-md">
           <%= link_to edit_quote_path(quote), class: 'inline-flex items-center p-1 border border-gray-300 text-xs font-medium rounded-l-md text-gray-900 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' do %>
@@ -14,7 +14,7 @@
         <% end %>
           </span>
       </div>
-      <div class="flex text-gray-500">
+      <div class="flex flex-col sm:flex-row text-gray-500">
         <div class="flex-grow"><%= quote.user.name %></div>
         <p><%= time_ago_in_words(quote.created_at) %> geleden.</p>
       </div>
