--- a/app/views/meetings/notuleer.html.erb
+++ b/app/views/meetings/notuleer.html.erb
@@ -19,7 +19,7 @@
 
   <div class="mt-4">
     <%= f.submit "Opslaan", class: submit_classes %>
-    <%= f.submit "Annuleren", class: "cursor-pointer inline-flex items-center px-4 py-2 border border-gray-300 shadow-sm text-base font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+    <%= f.submit "Annuleren", class: button_classes %>
     <span class="text-muted" data-target="autosave.status"></span>
   </div>
 <% end %>
