--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -15,9 +15,9 @@
 
 <% if current_user.admin? %>
   <% content_for :options do %>
-    <%= link_to "Notuleer", notuleer_meeting_path(@meeting), class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
-    <%= link_to "Wijzig", edit_meeting_path(@meeting), class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
-    <%= link_to "Verwijder", @meeting, method: :delete, data: { confirm: 'Weet je het zeker?' }, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+    <%= link_to "Notuleer", notuleer_meeting_path(@meeting), class: button_classes %>
+    <%= link_to "Wijzig", edit_meeting_path(@meeting), class: button_classes %>
+    <%= link_to "Verwijder", @meeting, method: :delete, data: { confirm: 'Weet je het zeker?' }, class: button_classes %>
   <% end %>
 <% end %>
 
@@ -59,7 +59,7 @@
         <% if @meeting.attendees.any? %>
           <div class="flex flex-wrap content-center justify-evenly">
             <% @meeting.attendees.each do |a| %>
-              <%= gravatar_for a.user, size: 64, class: "h-10 w-10 rounded-full m-2" %>
+              <%= gravatar_for a.user, class: "h-10 w-10 rounded-full m-2" %>
             <% end %>
           </div>
         <% end %>
