--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -4,7 +4,7 @@
 
 <% if current_user.admin? %>
   <% content_for :options do %>
-    <%= link_to 'Voeg groep toe', new_usergroup_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+    <%= link_to 'Voeg groep toe', new_usergroup_path, class: button_classes %>
   <% end %>
 <% end %>
 
