--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,7 +32,7 @@
         <div class="flex items-center">
           <%= link_to root_path do %>
             <div class="flex-shrink-0">
-              <img class="h-8 w-6" src="<%= image_path('logo_transparant_background_small.png') %>" alt="Hamers">
+              <img class="h-10" src="<%= image_path('logo_transparant_background_small.png') %>" alt="Hamers">
             </div>
           <% end %>
         </div>
@@ -97,7 +97,7 @@
               <div>
                 <button type="button" class="max-w-xs bg-gray-800 rounded-full flex items-center text-sm focus:outline-none focus:ring-2 focus:ring-hamers-yellow-500" data-action="click->dropdown#toggle click@window->dropdown#hide" id="user-menu">
                   <span class="sr-only">Open user menu</span>
-                  <%= gravatar_for current_user, class: "h-8 w-8 rounded-full" %>
+                  <%= gravatar_for current_user, class: "h-10 w-10 rounded-full" %>
                 </button>
               </div>
 
