--- a/app/views/public_pages/_form.html.erb
+++ b/app/views/public_pages/_form.html.erb
@@ -20,7 +20,7 @@
           <%= f.check_box :public, { checked: @public_page.public, class: "focus:ring-hamers-red-500 h-4 w-4 text-hamers-red-600 border-gray-300 rounded" } %>
         </div>
         <div class="ml-3 text-sm">
-          <label class="font-medium text-gray-700">Ook voor plebs te zien</label>
+          <%= f.label :public, "Ook voor plebs te zien", class: "font-medium text-gray-700" %>
         </div>
       </div>
     </div>
