--- a/app/views/stickers/_form.html.erb
+++ b/app/views/stickers/_form.html.erb
@@ -11,7 +11,7 @@
   <%= f.text_area :notes, class: input_classes %>
 
   <%= f.submit :Verstuur, class: submit_classes %>
-  <button class="px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" onclick="getLocation()">Get location</button>
+  <button class="<%= button_classes %>" onclick="getLocation()">Get location</button>
 <% end %>
 
 <script type="application/javascript">
