--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 
 <% if current_user == @user %>
   <% content_for :options do %>
-    <%= link_to 'Instellingen', edit_user_path(current_user), class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+    <%= link_to 'Instellingen', edit_user_path(current_user), class: button_classes %>
   <% end %>
 <% end %>
 
