--- a/app/views/blogitems/index.html.erb
+++ b/app/views/blogitems/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :options do %>
-  <%= button_to "Nieuwe blogpost", new_blogitem_path, method: :get, class: "cursor-pointer px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+  <%= button_to "Nieuwe blogpost", new_blogitem_path, method: :get, class: button_classes %>
 <% end %>
 
 <div class="grid gap-16 lg:grid-cols-3 lg:gap-x-5 lg:gap-y-12">
