--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :options do %>
-  <%= button_to "Nieuwe activiteit", new_event_path, method: :get, class: "cursor-pointer px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+  <%= button_to "Nieuwe activiteit", new_event_path, method: :get, class: button_classes %>
 <% end %>
 
 <div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
