--- a/app/views/users/settings/_form_api_keys.html.erb
+++ b/app/views/users/settings/_form_api_keys.html.erb
@@ -3,9 +3,9 @@
     <label for="email" class="<%= label_classes %>">Sleutel toevoegen</label>
     <div class="mt-1 flex rounded-md shadow-sm">
       <div class="relative flex items-stretch flex-grow focus-within:z-10">
-        <%= f.text_field :name, placeholder: 'Sleutelnaam', class: 'focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full rounded-none rounded-l-md sm:text-sm border-gray-300' %>
+        <%= f.text_field :name, placeholder: 'Sleutelnaam', class: input_classes %>
       </div>
-      <%= f.submit 'Toevoegen', class: 'cursor-pointer -ml-px relative inline-flex items-center space-x-2 px-4 py-2 border border-gray-300 text-sm font-medium rounded-r-md text-gray-700 bg-gray-50 hover:bg-gray-100 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500' %>
+      <%= f.submit 'Toevoegen', class: "-ml-px relative space-x-2 #{button_classes}" %>
     </div>
   </div>
 <% end %>
