--- a/app/views/brews/_form.html.erb
+++ b/app/views/brews/_form.html.erb
@@ -12,7 +12,7 @@
         </div>
     <% end %>
 
-    <%= f.rich_text_area :actiontext_description, class: 'form-control', placeholder: "blablabla" %>
+    <%= f.rich_text_area :description, class: 'form-control', placeholder: "blablabla" %>
     <div class="flex justify-center mt-5">
       <%= f.submit "Opslaan", class: submit_classes %>
     </div>
