--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,11 +6,10 @@
   <%= button_to "Nieuwe activiteit", new_event_path, method: :get, class: "cursor-pointer px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
 <% end %>
 
-<div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
-
-  <div class="flex items-center justify-between">
-    <div class="-mt-4">
-      <div class="border-b border-gray-200">
+<div class="-m-5 sm:-m-6">
+  <div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
+    <div class="flex items-center justify-between">
+      <div class="px-4 border-b border-gray-200">
         <nav class="-mb-px flex space-x-8">
           <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
             Binnenkort
@@ -20,41 +19,43 @@
           </button>
         </nav>
       </div>
-    </div>
 
-    <div class="" data-controller="popover" data-popover-translate-x="-90%" data-popover-translate-y="0" data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut">
-      <span class="">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
-        </svg>
-      </span>
-      <div class="content hidden absolute max-w-xs bg-gray-300 rounded p-2" data-popover-target="content">
-        <p>iCal links voor je API keys:</p>
-        <ul role="list" class="divide-y divide-gray-200">
-          <% current_user.api_keys.each do |ak| %>
-            <li class="py-2">
-              <div class="flex space-x-3">
-                <div class="flex-1 space-y-1">
-                  <div class="flex items-center justify-between">
-                    <h3 class="text-sm font-medium"><%= ak.name %></h3>
+      <div data-controller="popover" data-popover-translate-x="-90%" data-popover-translate-y="0" data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut">
+        <span>
+          <svg xmlns="http://www.w3.org/2000/svg" class="mr-4 h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
+            <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"/>
+          </svg>
+        </span>
+        <div class="content hidden absolute max-w-xs bg-gray-300 rounded p-2" data-popover-target="content">
+          <p>iCal links voor je API keys:</p>
+          <ul role="list" class="divide-y divide-gray-200">
+            <% current_user.api_keys.each do |ak| %>
+              <li class="py-2">
+                <div class="flex space-x-3">
+                  <div class="flex-1 space-y-1">
+                    <div class="flex items-center justify-between">
+                      <h3 class="text-sm font-medium"><%= ak.name %></h3>
+                    </div>
+                    <p class="text-sm text-gray-500"><%= request.base_url %>/ical/<%= ak.key %>.ics</p>
                   </div>
-                  <p class="text-sm text-gray-500"><%= request.base_url %>/ical/<%= ak.key %>.ics</p>
                 </div>
-              </div>
-            </li>
-          <% end %>
-        </ul>
+              </li>
+            <% end %>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="hidden" data-tabs-target="panel">
-    <%= render "events/table", events: @upcoming_events %>
-  </div>
+    <div class="hidden" data-tabs-target="panel">
+      <%= render "events/table", events: @upcoming_events %>
+    </div>
 
-  <div class="hidden" data-tabs-target="panel">
-    <%= render "events/table", events: @past_events %>
-    <%= render 'shared/pagination/default' %>
-  </div>
+    <div class="hidden" data-tabs-target="panel">
+      <%= render "events/table", events: @past_events %>
+      <div class="py-6">
+        <%= render 'shared/pagination/default' %>
+      </div>
+    </div>
 
+  </div>
 </div>
