--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -25,7 +25,7 @@
 
 <div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
   <aside class="ml-6 my-6 md:col-span-8 md:pr-6">
-    <%= @recipe.actiontext_description %>
+    <%= @recipe.description %>
   </aside>
 
   <div class='md:col-span-4 md:pl-6 my-6'>
