fix split layout

--- a/app/views/brews/edit.html.erb
+++ b/app/views/brews/edit.html.erb
@@ -2,4 +2,12 @@
   Uitvoering van <%= @recipe.name %> aanpassen
 <% end %>
 
-<%= render "form" %>
+<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+  <aside class="ml-6 my-6 md:col-span-4 md:pr-6">
+    <%= @recipe.description %>
+  </aside>
+
+  <div class='md:col-span-8 md:pl-6 my-6'>
+    <%= render 'form' %>
+  </div>
+</div>
