Hamers logo aspect ratio (#334)
* Fix hamerslogo aspect ratio and enlarge images in nav slightly

* Revert user image resize

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -32,7 +32,7 @@
         <div class="flex items-center">
           <%= link_to root_path do %>
             <div class="flex-shrink-0">
-              <img class="h-8 w-6" src="<%= image_path('logo_transparant_background_small.png') %>" alt="Hamers">
+              <img class="h-10" src="<%= image_path('logo_transparant_background_small.png') %>" alt="Hamers">
             </div>
           <% end %>
         </div>
