--- a/app/views/layouts/application_public.html.erb
+++ b/app/views/layouts/application_public.html.erb
@@ -22,7 +22,7 @@
 
   <%= yield %>
 
-  <nav class="flex flex-wrap justify-center">
+  <nav class="mt-8 flex flex-wrap justify-center">
     <% pages = {
       Home: root_path,
       Leden: public_leden_path,
