--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,16 +1,16 @@
 <li class="py-4">
   <div class="flex space-x-3 text-sm">
     <%= gravatar_for quote.user, class: "h-8 w-8 rounded-full self-center" %>
-    <div class="flex-col flex-1 space-y-1">
-      <div class="flex flex-col sm:flex-row space-y-1 justify-between self-center">
+    <div class="flex-col flex-1">
+      <div class="flex flex-col sm:flex-row justify-between self-center">
         <h3 class="flex-grow font-medium"><%= quote.text %></h3>
         <span class="relative z-0 inline-flex rounded-md">
           <%= link_to edit_quote_path(quote), class: 'inline-flex items-center p-1 border border-gray-300 text-xs font-medium rounded-l-md text-gray-900 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' do %>
-            <%= heroicon('pencil', class_name: "h-4 w-4") %>
+            <%= heroicon('pencil', class_name: "h-4 w-4") %> <span class="sm:hidden">Wijzigen</span>
           <% end %>
           <%= link_to quote, method: :delete, data: { confirm: 'Weet je het zeker?' }, title: quote.text,
                       class: '-ml-px inline-flex items-center p-1 border border-gray-300 text-xs font-medium rounded-r-md   text-gray-900 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' do %>
-            <%= heroicon('trash', class_name: "h-4 w-4") %>
+            <%= heroicon('trash', class_name: "h-4 w-4") %> <span class="sm:hidden">Verwijderen</span>
         <% end %>
           </span>
       </div>
